@@ -1,3 +1,2 @@
 <foo>
 	a <Bar> .
-
